# CSC450_Project

./: CMakeLists.txt  Doxyfile  corrected_notebook.nb  spare.txt
Report1/: Report1.nb  expDecayResults.txt  polyFuncResults.txt  sineWaveResults.txt
calc/Development/Projects/: main.cpp
calc/Development/Source/: Function1d.cpp  domainOfDefinition.cpp
calc/SDK/Headers/: DomainOfDefinition.h  Function1d.h
csc450lib/calc/Development/Source/: BisectionSolver1D.cpp  Function1D.cpp  NewtonRaphsonSolver1D.cpp  PolynomialFunction1D.cpp  SecantSolver1D.cpp  domainOfDefinition.cpp
csc450lib/calc/Documentation/html/: _domain_of_definition_8h_source.html  _function1_d_8h_source.html  _polynomial_function1_d_8h_source.html  annotated.html  classcsc450lib_1_1calc_1_1_domain_of_definition-members.html  classcsc450lib_1_1calc_1_1_domain_of_definition.html  classcsc450lib_1_1calc_1_1_function1_d-members.html  classcsc450lib_1_1calc_1_1_function1_d.html  classcsc450lib_1_1calc_1_1_polynomial_function1_d-members.html  classcsc450lib_1_1calc_1_1_polynomial_function1_d.html  classes.html  dir_7e460379229644b32e618bbcb3761a8a.html  dir_92955b1b6695674a172ab102b63c0ec8.html  dir_b23ce9843a0cf83641620a63d26b700d.html  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  hierarchy.html
csc450lib/calc/Documentation/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  (+7 more)
csc450lib/calc/Documentation/latex/: _domain_of_definition_8h_source.tex  _function1_d_8h_source.tex  _polynomial_function1_d_8h_source.tex  annotated.tex  classcsc450lib_1_1calc_1_1_domain_of_definition.tex  classcsc450lib_1_1calc_1_1_function1_d.eps  classcsc450lib_1_1calc_1_1_function1_d.tex  classcsc450lib_1_1calc_1_1_polynomial_function1_d.eps  classcsc450lib_1_1calc_1_1_polynomial_function1_d.tex  files.tex  hierarchy.tex  refman.tex
csc450lib/calc/SDK/Demos/: ExponentialDecayOscillation.cpp  ExponentialDecayOscillation.h  SineWaveVaryingAmplitude.cpp  SineWaveVaryingAmplitude.h
csc450lib/calc/SDK/Headers/: BisectionSolver1D.h  DomainOfDefinition.h  Function1D.h  NewtonRaphsonSolver1D.h  NonlinearSolver1D.h  PolynomialFunction1D.h  SecantSolver1D.h
csc450lib/calc/SDK/Libraries/: CSC450Lib.h
csc450lib/random/Development/Source/: Ball.cpp  BallSimulation.cpp  CSC450Exception.cpp  Surface.cpp
csc450lib/random/SDK/Demos/: main.cpp
csc450lib/random/SDK/Headers/: Ball.h  BallSimulation.h  CSC450Exception.h  CSC450Lib.h  Surface.h
